scrollee.css
.scrollee.initialized .scrollee-item {
  display: none;
}

.scrollee {
  height: 100vh;
  color: #fff;
}

.scrollee .scrollee-dynamic {
  position: relative;
  height: 100vh;
  position: sticky;
  overflow: hidden;
  background-color: #000;
  top: 0;
}

.scrollee .scrollee-dynamic .scrollee-backgrounds {
  position: absolute;
  left: 0;
  right: 0;
  top: -200px;
  bottom: -200px;
}

.scrollee .scrollee-dynamic .scrollee-backgrounds img {
  transition: all 0.45s cubic-bezier(0.5, 1, 0.89, 1);
}

.scrollee .scrollee-dynamic .scrollee-backgrounds.anim-up img {
  transform: translate3d(0, -200px, 0);
}
.scrollee .scrollee-dynamic .scrollee-backgrounds.anim-up img.prevActive {
  transform: translate3d(0, 200px, 0);
}

.scrollee .scrollee-dynamic .scrollee-backgrounds.anim-down img {
  transform: translate3d(0, 200px, 0);
}
.scrollee .scrollee-dynamic .scrollee-backgrounds.anim-down img.prevActive {
  transform: translate3d(0, -200px, 0);
}

.scrollee .scrollee-dynamic .scrollee-backgrounds img.active {
  transform: translate3d(0, 0, 0);
  opacity: 1;
}

.scrollee .scrollee-dynamic .scrollee-backgrounds .overlay {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.4);
  z-index: 2;
}

.scrollee .scrollee-dynamic .scrollee-backgrounds img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  opacity: 0;
}

.scrollee .scrollee-dynamic ul,
.scrollee .scrollee-dynamic li {
  list-style: none;
  padding: 0;
  margin: 0;
}

.scrollee .scrollee-dynamic .scrollee-small-list {
  margin-top: 50px;
  text-align: right;
}

.scrollee .scrollee-dynamic .scrollee-small-list li {
  font-size: 1.4rem;
}

.scrollee .scrollee-dynamic .scrollee-content-top,
.scrollee .scrollee-dynamic .scrollee-content-bottom {
  flex: 1;
  height: 25vh;
}

.scrollee .scrollee-dynamic .scrollee-big-list {
  position: static;
  margin-top: 0;
  height: 120px;
  overflow: hidden;
  text-align: right;
  border-bottom: 1px solid #fff;
}

.scrollee .scrollee-dynamic .scrollee-big-list .scrollee-item-category {
  font-size: 1rem;
}

.scrollee .scrollee-dynamic .scrollee-big-list a {
  text-decoration: none;
  color: inherit;
}

.scrollee .scrollee-dynamic .scrollee-filters-wrap {
  position: absolute;
  z-index: 999;
  top: 50px;
  left: 0;
  right: 0;
}

.scrollee .scrollee-dynamic .scrollee-filters {
  text-align: right;
}
.scrollee .scrollee-dynamic .scrollee-filters li {
  display: inline-block;
  padding: 10px 15px;
  border-radius: 50px;
  cursor: pointer;
  margin-left: 5px;
  border: 1px solid transparent;
  user-select: none;
}
.scrollee .scrollee-dynamic .scrollee-filters li.active {
  border-color: #fff;
}

.scrollee .scrollee-dynamic .scrollee-filters li:hover {
  background-color: rgba(255, 255, 255, 0.2);
}

.scrollee .scrollee-dynamic .scrollee-small-list {
  overflow: hidden;
}

.scrollee .scrollee-dynamic .scrollee-big-list ul,
.scrollee .scrollee-dynamic .scrollee-small-list ul {
  transition: all 0.45s cubic-bezier(0.5, 1, 0.89, 1);
}

.scrollee .scrollee-dynamic .scrollee-big-list li {
  height: 120px;
  font-size: 100px;
  line-height: 1;
  white-space: nowrap;
}

.scrollee .scrollee-dynamic .scrollee-content-wrap {
  position: relative;
  z-index: 3;
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: center;
}

.scrollee .scrollee-dynamic .scrollee-content {
  position: absolute;
  margin-top: 30px;
  z-index: 2;
}

.scrollee .scrollee-dynamic .scrollee-content > div {
  display: none;
}

.scrollee .scrollee-dynamic .scrollee-content > div.active {
  display: block;
}

.scrollee .scrollee-dynamic .scrollee-content a {
  text-decoration: none;
  color: inherit;
  background-color: rgba(255, 255, 255, 0.3);
  display: inline-block;
  padding: 10px 15px;
}

.scrollee .scrollee-dynamic .scrollee-content a:hover {
  background-color: rgba(255, 255, 255, 0.5);
}

